[package]
name = "risotto"
version = "0.1.0"
authors = ["Sergey Orlovsky <sergey@test2trade.com>"]

[dependencies]
num = "0.1"
num-bigint = "0.1"
#openssl =  { path = "/Users/sergey/code/rust/rust-openssl/openssl" }
openssl = "0.9"
libflate = { path = "/Users/sergey/code/rust/libflate" }
flate2 = "0.2"
deflate = { path = "/Users/sergey/code/rust/deflate-rs" }
gzip-header = "0.1"
